Add pipeline support