@@ -3,152 +3,95 @@ package fr.emeric0101.logstasher.service;
 import fr.emeric0101.logstasher.configuration.LogstashProperties;
 import fr.emeric0101.logstasher.dto.ExecutionQueue;
 import fr.emeric0101.logstasher.dto.LogstashRunning;
-import fr.emeric0101.logstasher.entity.BatchArchive;
+import fr.emeric0101.logstasher.entity.Pipeline;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.util.*;
-import java.util.concurrent.Semaphore;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
+
+/**
+ * Manage logstash instances
+ */
 
 @Service
 public class LogstashService {
-    final static String log_cmd = "java.exe -Xms1g -Xmx1g -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -Djava.awt.headless=true -Dfile.encoding=UTF-8 -Djruby.compile.invokedynamic=true -Djruby.jit.threshold=0 -XX:+HeapDumpOnOutOfMemoryError -Djava.security.egd=file:/dev/urandom  -cp \"\"%LOGSTASH_PATH%/logstash-core/lib/jars/animal-sniffer-annotations-1.14.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/commons-codec-1.11.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/commons-compiler-3.0.8.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/error_prone_annotations-2.0.18.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/google-java-format-1.1.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/gradle-license-report-0.7.1.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/guava-22.0.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/j2objc-annotations-1.1.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/jackson-annotations-2.9.5.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/jackson-core-2.9.5.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/jackson-databind-2.9.5.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/jackson-dataformat-cbor-2.9.5.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/janino-3.0.8.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/javassist-3.22.0-GA.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/jruby-complete-9.1.13.0.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/jsr305-1.3.9.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/log4j-api-2.9.1.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/log4j-core-2.9.1.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/log4j-slf4j-impl-2.9.1.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/logstash-core.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.core.commands-3.6.0.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.core.contenttype-3.4.100.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.core.expressions-3.4.300.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.core.filesystem-1.3.100.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.core.jobs-3.5.100.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.core.resources-3.7.100.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.core.runtime-3.7.0.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.equinox.app-1.3.100.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.equinox.common-3.6.0.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.equinox.preferences-3.4.1.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.equinox.registry-3.5.101.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.jdt.core-3.10.0.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.osgi-3.7.1.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/org.eclipse.text-3.5.101.jar\";\"%LOGSTASH_PATH%/logstash-core/lib/jars/slf4j-api-1.7.25.jar\"\" org.logstash.Logstash";
+
     @Autowired
     LogstashProperties logstashProperties;
 
-    boolean isWindows;
+    Map<String, LogstashInstance> instances = new ConcurrentHashMap<>();
 
-    Process logstashInstance = null;
-    Thread bufferThread;
-    Semaphore semaphore = new Semaphore(1);
-    private String dataPath = "data_logstasher";
-
-    List<String> buffer = new ArrayList<String>();
-
-
-    public LogstashService() {
-        isWindows = System.getProperty("os.name").startsWith("Windows");
-    }
-
+    @Autowired
+    SimpMessagingTemplate template;
 
     /**
-     * Start logstash with args
+     * Create or get the logstash instance
+     * @param instance
+     * @return
      */
-    public void start(ExecutionQueue.ExecutionBatch currentBatch, Consumer<Integer> endCallback, Consumer<String> logAddLines) {
-        if (logstashInstance != null && logstashInstance.isAlive()) {
+    public LogstashInstance getInstance(String instance) {
+        if (!instances.containsKey(instance)) {
+            LogstashInstance logstashInstance = new LogstashInstance(logstashProperties, instance);
+            instances.put(instance, logstashInstance);
+        }
+        return instances.get(instance);
+    }
+
+    public void stop(String instance) {
+        if (instances.containsKey(instance)) {
+            this.instances.get(instance).stopLogstash();
+        }
+    }
+
+    public void clearBuffer(String instance) {
+        if (instances.containsKey(instance)) {
+            this.instances.get(instance).clearBuffer();
+        }
+    }
+
+    public void startBatches(String instance, ExecutionQueue.ExecutionBatch currentBatch, Consumer<Integer> endCallback, Consumer<String> logAddLines) {
+        this.getInstance(instance).start(currentBatch, null, endCallback, logAddLines);
+    }
+
+    public void startPipeline(String instance, List<Pipeline> pipelines, Consumer<Integer> endCallback, Consumer<String> logAddLines) {
+        this.getInstance(instance).start(null, pipelines,  endCallback, logAddLines);
+    }
+
+    public LogstashRunning getRunning(String instance) {
+        if (instances.containsKey(instance)) {
+            LogstashRunning running = new LogstashRunning();
+            LogstashInstance logstashInstance = this.instances.get(instance);
+            running.setState(logstashInstance.getState());
+            running.setBuffer(logstashInstance.getBuffer());
+            if (logstashInstance.getCurrentBatch() != null) {
+                running.setBatch(logstashInstance.getCurrentBatch().getBatch());
+            }
+            running.setPipelines(logstashInstance.getCurrentPipelines());
+            running.setInstance(instance);
+            running.setStarted(logstashInstance.getStartDate());
+            return running;
+        }
+        return null;
+    }
+
+    /**
+     * Send the current state the user
+     */
+    public void sendState(String instance) {
+        LogstashRunning logstashRunning = getRunning(instance);
+        if (logstashRunning == null) {
             return;
         }
-
-        try {
-            List<String> cmds = new ArrayList<String>();
-            cmds.addAll(Arrays.asList(log_cmd.replaceAll("%LOGSTASH_PATH%", logstashProperties.getPath()).split(" ")));
-            // if batch, run it
-            if (currentBatch != null) {
-                // archive execution batch state
-                cmds.addAll(new ArrayList<String>() {{
-                    add("-e");
-                    add("\"" + currentBatch.getBatch().getContent()
-                            .replace("\"", "\\\"").replace("\t", " ")
-                            + "\"");
-                }});
-            }
-            cmds.add("--path.data");
-            cmds.add(logstashProperties.getPath() + (isWindows ? "\\" : "/") + dataPath);
-
-            ProcessBuilder pb = new ProcessBuilder(cmds);
-            pb.environment().put("LS_HOME", logstashProperties.getPath());
-
-
-            logstashInstance = pb.start();
-            bufferThread = new Thread(() -> {
-                while (logstashInstance.isAlive()) {
-                    try {
-                        BufferedReader input = new BufferedReader(new InputStreamReader(logstashInstance.getInputStream()));
-                        String line = input.readLine();
-                        if (line != null) {
-                            semaphore.acquire();
-                            if (currentBatch != null) {
-                                currentBatch.getOutput().add(line);
-                            }
-                            buffer.add(line);
-
-                            semaphore.release();
-                            logAddLines.accept(line);
-                        }
-                    } catch (InterruptedException e) {
-                        e.printStackTrace();
-                    } catch (IOException e) {
-                        e.printStackTrace();
-                    }
-
-                }
-                endCallback.accept(logstashInstance.exitValue());
-            });
-            bufferThread.start();
-            // Start the process buffer
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        template.convertAndSend("/state", logstashRunning);
     }
 
-    public void stopLogstash() {
-        if (logstashInstance != null && logstashInstance.isAlive()) {
-            logstashInstance.destroy();
 
-            try {
-                Thread.sleep(100);
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
-            if (logstashInstance.isAlive()) {
-                Process p = logstashInstance.destroyForcibly();
-
-                try {
-                    p.waitFor();
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                }
-            }
-            bufferThread.interrupt();
-            logstashInstance = null;
-
-        }
-    }
-
-    public List<String> getBuffer() {
-        try {
-            semaphore.acquire();
-            return new ArrayList<String>() {{
-                addAll(buffer);
-            }};
-        } catch (InterruptedException e) {
-            throw new RuntimeException("Unable to get semaphone on logstash buffer");
-        } finally {
-            semaphore.release();
-        }
-    }
-
-    public void clearBuffer() {
-        try {
-            semaphore.acquire();
-            buffer.clear();
-        } catch (InterruptedException e) {
-            throw new RuntimeException("Unable to get semaphone on logstash buffer");
-        } finally {
-            semaphore.release();
-        }
-    }
-
-    public String getState() {
-        if (logstashInstance == null || !logstashInstance.isAlive()){
-            return "STOPPED";
-        } else {
-            return "RUNNING";
-        }
+    public List<LogstashRunning> getRunningAll() {
+        return instances.keySet().parallelStream().map(e -> getRunning(e)).collect(Collectors.toList());
     }
 }
